corrections contraste boutons

--- a/assets/style.css
+++ b/assets/style.css
@@ -104,7 +104,7 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #5A5A26;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
@@ -207,7 +207,7 @@ body {
 
 .picture.right::before {
 	content: ' ';
-	background-color: #BEB45A;
+	background-color: #5A5A26;
 	width: 374px;
 	height: 329px;
 	position: absolute;
@@ -244,8 +244,9 @@ form textarea {
 	margin-bottom: 20px;
 }
 input[type="submit"] {
-	background-color: #BEB45A;
-	padding: .5em 1em
+	background-color: #5A5A26;
+	padding: .5em 1em;
+	color: white;
 }
 
 
